Creting Menu Partial

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,10 @@
 @import "_menu";
 @import "notes";
 @import "_sidebar";
+
+@import "froala_editor.min.css";
+@import "froala_style.min.css";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+@import "toastr";
