Creating Menu Partial

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -10,3 +10,12 @@ html,body{
 .action-buttons{
   margin-bottom: 10px;
 }
+
+.note_box{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.action-buttons{
+  margin-bottom: 10px;
+}
